# PhantomWalk

./: .gitignore  README.md  codecov.yml  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: pytest.yml
phantomwalk/: create_system_dpd.py  dpd_utils.py
phantomwalk/examples/: 1-bead-spring-dpd.ipynb  2-dpd-energy-gsd.ipynb  3-dpd-to-lj-wca.ipynb  graph-dpd-vs-r.ipynb  hoomd_dpd_energy.ipynb  test_walk.ipynb
phantomwalk/examples/dev/: test_walk.ipynb
phantomwalk/lib/: create_system_dpd.py  dpd_utils.py
phantomwalk/src/: create_system_dpd.py
phantomwalk/tests/: test_create_system_dpd.py  test_dpd_utils.py
polywalkdpd/examples/: 2-dpd-energy-gsd.ipynb
