[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomwalk"
description = "Polymer system initialization workflow that utilizes a random walk and dissipative particle dynamics as a soft push potential."
readme = "README.md"
license = { text = "GPLv3" }
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/cmelab/PhantomWalk"}
requires-python = ">=3.10"
dynamic = ["version"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["phantomwalk*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
phantomwalk = [
  "src/**"
]
